fix spacing

--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ html, body {
     display: inline-block;
     clip-path: polygon(0 0, 100% 5px, 100% 100%, 0 100%);
     line-height: 1.2;
-    
+
     width: 191px;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -93,10 +93,16 @@ html, body {
 .mainpagecontainer {
     display: inline-flex;
     flex-direction: column;
+
     align-items: center;
     justify-content: center;
+
     height: 128px;
     width: 128px;
+
     overflow: hidden;
     text-overflow: ellipsis;
+
+    margin-left: 50px;
+    margin-right: 50px;
 }
